--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -34,6 +34,7 @@
 .text{
     font-size: 1.8rem;
     line-height: 3rem;
+    color: $font-color-light;
 
     &-center{
         text-align: center;
