--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -34,9 +34,10 @@
         a{
             text-decoration: none;
             color: $font-color-light;
+
         }
 
-        &.active{
+        &.active a{
             font-weight: bold;
             color: $menu-item-active;
         }
