--- a/src/assets/styles/_footer.scss
+++ b/src/assets/styles/_footer.scss
@@ -1,4 +1,5 @@
 @import './variables';
+@import './mixins';
 
 .footer{
     background-image: linear-gradient(120deg, rgba(130, 34, 114, .7) 20%, rgba(249, 153, 233, 1) 100%);
@@ -12,11 +13,22 @@
         max-width: 123rem;
         margin: 0rem auto;
 
+        @include response(phone-mini){
+            width: 100%;
+            grid-template-rows: repeat(4);
+            gap: 4rem;
+            grid-template-columns:1fr;
+        }
+
     }
 }
 
 .brand-block{
     width: 49rem;
+
+    @include response(phone-mini){
+        width: 100%;
+    }
 }
 
 .brand-text{
