--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -18,10 +18,13 @@
 
 @mixin response($breakpoint){
     @if $breakpoint == phone-mini {
-        @media (max-width: 22.5em){ @content;} //360px
+        @media (max-width: 22.5em){ @content;} //320px
     }
     @if $breakpoint == phone {
-        @media (max-width: 37.5em){ @content;} //600px
+        @media (max-width: 26.5em){ @content;} //375px-425px
+    }
+    @if $breakpoint == phone-large {
+        @media (max-width: 37.5em){ @content;} //425-600px
     }
     @if $breakpoint == tab-port {
         @media(max-width:56.25em){ @content; } //900px
@@ -41,6 +44,15 @@
     top:30%;
     left:30%;
     transform: translate(-25%,-30%);
+
+    @include response(phone){
+        left:25%;
+    }
+
+    @include response(tab-port){
+      left:25%;
+    }
+
 }
 
 @mixin central{
@@ -57,8 +69,12 @@
     left:50%;
     transform: translate(-50%, 0rem);
 
+    @include response(phone-large){
+        top: 32rem;
+    }
+
     @include response(phone-mini){
-        top: 27rem;
+        top: 36rem;
     }
 }
 
@@ -69,7 +85,7 @@
     @if $colorb == black{
         border-bottom: 3px solid $font-color-dark;
 
-        @include response(phone-mini){
+        @include response(phone){
             border-bottom: 2px solid $font-color-dark;
         }
 
@@ -77,7 +93,7 @@
     @if $colorb == white{
         border-bottom: 3px solid #ffffff;
 
-        @include response(phone-mini){
+        @include response(phone){
             border-bottom: 2px solid #ffffff;
         }
 
