--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -33,7 +33,7 @@
             margin: 5rem 0;
         }
 
-        @include response(phone-mini){
+        @include response(phone){
             margin-top: 0rem;
         }
     }
@@ -49,7 +49,7 @@
         text-align: center;
         margin-bottom: 3.5rem;
 
-        @include response(phone-mini){
+        @include response(phone){
             text-align:left;
         }
     }
