--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -81,7 +81,7 @@
         margin-bottom: 15rem;
     }
 
-    @include response(phone-large){
+    @include response(phone){
         padding: 4rem;
         border-radius: 0rem;
         height:46rem;
@@ -89,6 +89,14 @@
         margin: 15rem 0;
     }
 
+
+    @include response(phone-large){
+        padding: 4rem;
+        border-radius: 0rem;
+        height:46rem;
+        justify-content: unset;
+        margin: 15rem 0;
+    }
 }
 
 .one-column{
