--- a/src/assets/styles/_animation.scss
+++ b/src/assets/styles/_animation.scss
@@ -1,3 +1,20 @@
+.mobile-nav-enter-active,
+.mobile-nav-leave-active{
+   transition: 1s ease all;
+}
+
+.mobile-nav-enter-from,
+.mobile-nav-leave-to{
+    transform: translateX(-250px);
+}
+
+.mobile-nav-enter-to,
+.mobile-nav-leave-from{
+    transform: translateX(0);
+}
+
+
+
 // .slide-enter-from,
 // .slide-leave-to{
 //     opacity: 0;
