--- a/src/assets/styles/_header.scss
+++ b/src/assets/styles/_header.scss
@@ -7,7 +7,7 @@
     justify-content: space-between;
     align-items: center;
     max-width: 123rem;
-    margin: 5rem auto;
+    margin: 3rem auto;
 
     @include response(tab-land){
         padding: 4rem;
@@ -70,9 +70,7 @@
             display: block;
             color: $font-color-light;
             text-decoration: none;
-            padding: 4rem 0rem 2rem 4rem;
-            // margin-left: 2rem;
-            // margin-top: 2rem;
+            padding: 2rem;
             width:100%;
             height: 100%;
 
@@ -133,5 +131,9 @@ ul>li.nav__item{
     left: 0;
     z-index: 200;
     font-size: 2.4rem !important;
+
 }
 
+.dropdown-nav> .nav__item>.link{
+    padding: 3rem;
+}
